--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,10 @@
 # Ativa o mecanismo de reescrita
 RewriteEngine On
 
+Header set Cache-Control "no-store, no-cache, must-revalidate, max-age=0"
+Header set Pragma "no-cache"
+Header set Expires "0"
+
 # Retorna 404 para favicon.ico se ele não existir. Visa evitar chamadas duplas
 # ao framework, principalmente durante o desenvolvimento em que não há um
 # favicondefinido.
